--- a/vtt.html
+++ b/vtt.html
@@ -1,12 +1,15 @@
-<!DOCTYPE html>
+<!doctype html>
 <html>
-<head>
+  <head>
     <meta http-equiv="refresh" content="0; url=http://<IP_ADDRESS>" />
     <script>
-        window.location.href = "http://129.213.16.12";
+      window.location.href = "https://129.213.16.12:30000";
     </script>
-</head>
-<body>
-    <p>If you are not redirected, <a href="http://129.213.16.12">click here</a>.</p>
-</body>
+  </head>
+  <body>
+    <p>
+      If you are not redirected,
+      <a href="https://129.213.16.12:30000">click here</a>.
+    </p>
+  </body>
 </html>
